--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,1 +1,10 @@
+// external
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Roboto+Mono|Roboto");
+
+// user
 @import "./game-listing.scss";
+@import "./mixins.scss";
+
+* {
+    font-family: "Roboto", "Comfortaa", cursive;
+}
