--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -3,3 +3,6 @@ $padding-base: 6px;
 // Colors
 $white: #fcfcfc;
 $black: #070707;
+$green: rgb(131, 221, 131);
+$red: rgb(216, 124, 112);
+$blue: rgb(121, 202, 240);
