--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -17,7 +17,7 @@
 @mixin button {
     $button-height: 30px;
     border: 2px solid $white;
-    background-color: aquamarine;
+    background-color: $blue;
     color: $black;
     border: 2px solid rgba(0, 0, 0, 0.05);
     font-family: "Roboto";
@@ -26,6 +26,7 @@
     padding-left: $padding-base * 2;
     padding-right: $padding-base * 2;
     cursor: pointer;
+    color: $white;
     user-select: none;
     height: $button-height;
     line-height: $button-height;
