--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -5,6 +5,7 @@
     font-size: 1.4em;
     margin-bottom: $padding-base;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    font-family: $font--main;
 }
 
 @mixin card {
@@ -12,6 +13,7 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19);
     padding: $padding-base * 2;
     margin: $padding-base 0;
+    font-family: $font--main;
 }
 
 @mixin button {
@@ -20,7 +22,7 @@
     background-color: $blue;
     color: $black;
     border: 2px solid rgba(0, 0, 0, 0.05);
-    font-family: "Roboto";
+    font-family: $font--main;
     text-align: center;
     border-radius: $borderRadius--standard;
     padding-left: $padding-base * 2;
