--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -32,4 +32,8 @@
     user-select: none;
     height: $button-height;
     line-height: $button-height;
+    &--disabled {
+        pointer-events: none;
+        background-color: desaturate($blue, 90%);
+    }
 }
