--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,9 +1,10 @@
-$font--main: "Roboto";
-$borderRadius--standard: 6px;
-$padding-base: 6px;
-// Colors
-$white: #fcfcfc;
-$black: #070707;
-$green: rgb(131, 221, 131);
-$red: rgb(216, 124, 112);
-$blue: rgb(121, 202, 240);
+// external
+@import url("https://fonts.googleapis.com/css?family=Comfortaa|Roboto+Mono|Roboto");
+
+// user
+@import "./variables.scss";
+@import "./mixins.scss";
+
+* {
+    font-family: "Roboto", "Comfortaa", cursive;
+}
