--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,10 +1,15 @@
 // external
-@import url("https://fonts.googleapis.com/css?family=Comfortaa|Roboto+Mono|Roboto");
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Roboto+Mono|Roboto');
 
 // user
-@import "./variables.scss";
-@import "./mixins.scss";
+@import './variables.scss';
+@import './mixins.scss';
 
 * {
-    font-family: "Roboto", "Comfortaa", cursive;
+    font-family: 'Roboto', 'Comfortaa', cursive;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
