implement incredibly basic styles for pages

--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -15,6 +15,9 @@
     margin: $padding-base 0;
     font-family: $font--main;
     transition: 0.4s;
+}
+
+@mixin link {
     &:hover {
         transform: translate(0, -2px);
     }
