--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,9 +1,15 @@
-$font--main: "Roboto";
-$borderRadius--standard: 6px;
+$font--main: 'Roboto';
+$borderRadius--small: 2px;
+$borderRadius--large: 6px;
 $padding-base: 6px;
 // Colors
-$white: #fcfcfc;
-$black: #070707;
-$green: rgb(131, 221, 131);
-$red: rgb(216, 124, 112);
-$blue: rgb(121, 202, 240);
+$color--white: #fcfcfc;
+$color--black: #070707;
+$color--green: rgb(131, 221, 131);
+$color--red: rgb(216, 124, 112);
+$color--blue: rgb(121, 202, 240);
+$color--purple: rgb(57, 10, 63);
+
+//Box shadow
+$box-shadow--light: 0 2px 4px rgba(0, 0, 0, 0.1);
+$box-shadow--heavy: 0 4px 6px rgba(0, 0, 0, 0.19);
