--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -31,6 +31,7 @@
         max-width: 100%;
         min-width: 100%;
         min-height: 10ch;
+        height: 30ch;
         margin: $padding-base 0;
         border-radius: $borderRadius--large;
     }
