--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,9 +1,9 @@
-$font--main: 'Roboto';
 $borderRadius--small: 2px;
 $borderRadius--large: 6px;
 $padding-base: 6px;
 // Colors
 $color--white: #fcfcfc;
+$color--grey: rgb(71, 71, 71);
 $color--black: #070707;
 $color--green: rgb(131, 221, 131);
 $color--red: rgb(216, 124, 112);
@@ -13,3 +13,8 @@ $color--purple: rgb(57, 10, 63);
 //Box shadow
 $box-shadow--light: 0 2px 4px rgba(0, 0, 0, 0.1);
 $box-shadow--heavy: 0 4px 6px rgba(0, 0, 0, 0.19);
+
+//Fonts
+$font--main: 'MartelSans', sans-serif;
+$font--code: 'Fira Mono', monospace;
+$font--buttons: 'MartelSans', sans-serif;
