minor style fix for game not found page

--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -6,7 +6,7 @@
         @include button;
     }
     &__error {
-        font-weight: 800;
-        color: #743030;
+        @include card;
+        color: #b10404;
     }
 }
