--- a/src/components/Dice/Dice.scss
+++ b/src/components/Dice/Dice.scss
@@ -11,7 +11,7 @@
 
 .dice-tool {
     @include card;
-    $dice-height: 70px;
+    $dice-height: 100px;
     &__title {
         @include title;
     }
@@ -40,5 +40,7 @@
     &__dice-container {
         display: flex;
         justify-content: space-evenly;
+        cursor: pointer;
+        user-select: none;
     }
 }
