--- a/src/components/GameManagementForm/GameManagementForm.scss
+++ b/src/components/GameManagementForm/GameManagementForm.scss
@@ -3,7 +3,7 @@
 .game-management-form {
     @include page;
     &__button {
-        @include button;
+        @include forms--button;
     }
     &__title {
         @include title;
