--- a/src/components/GamePage/GamePage.scss
+++ b/src/components/GamePage/GamePage.scss
@@ -3,7 +3,7 @@
 .game-page {
     @include page;
     &__button {
-        @include button;
+        @include forms--button;
     }
     &__error {
         @include card;
