--- a/src/components/GamesList/GamesList.scss
+++ b/src/components/GamesList/GamesList.scss
@@ -21,7 +21,7 @@
         width: $size;
         border-radius: 100%;
         background-color: $color--blue;
-        color: $color--black;
+        color: $color--white;
         text-align: center;
         line-height: $size;
         font-size: 3em;
