--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -23,7 +23,13 @@
     }
     &__button {
         @include forms--button;
-        width: 17%;
+
+        &--save {
+            background-color: $color--blue;
+            border: $color--white;
+            color: $color--white;
+            box-shadow: $box-shadow--light;
+        }
     }
     &__textarea {
         box-sizing: border-box;
@@ -43,5 +49,43 @@
         &--error {
             color: $color--red;
         }
+    }
+    &__tool-list {
+        @include card;
+    }
+    &__region {
+        @include card;
+    }
+    &__bottom-bar {
+        display: block;
+        position: absolute;
+        bottom: $padding-base * 4;
+        right: $padding-base * 5;
+        width: auto;
+    }
+
+    &__tool-listing {
+        background-color: $color--purple;
+        color: $color--white;
+        padding: 6px 8px;
+        margin: 2px 2px;
+
+        font-size: 0.8em;
+        font-weight: 800;
+        font-family: $font--code;
+        border-radius: $borderRadius--large;
+        display: inline-block;
+    }
+    &__minus {
+        $height: 1em;
+        width: $height;
+        height: $height;
+        line-height: $height;
+        border: 2px solid $color--red;
+        color: $color--red;
+        border-radius: 50%;
+        text-align: center;
+        display: inline-block;
+        margin-left: 6px;
     }
 }
