--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,5 +1,5 @@
 // external
-@import url('https://fonts.googleapis.com/css?family=Fira+Mono|Martel+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Fira+Mono|Martel+Sans&display=swap|Monserrat');
 
 // user
 @import './variables.scss';
