Add button role to tool list

--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -73,6 +73,7 @@
     }
     &__minus {
         $height: 1em;
+        cursor: pointer;
         width: $height;
         height: $height;
         line-height: $height;
