--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -54,23 +54,18 @@
 }
 
 @mixin forms--button {
-    $button-height: 20px;
     min-width: 100px;
     font-family: $font--buttons;
     letter-spacing: 0.3px;
     font-size: 16px;
     border: 2px solid rgba($color--black, 0.6);
     border-radius: $borderRadius--large;
-    padding: 6px;
     text-decoration: none;
     color: $color--white;
     border-color: $color--white;
     text-align: center;
-    padding-left: $padding-base * 2;
-    padding-right: $padding-base * 2;
+    padding: 4px 8px;
     user-select: none;
-    height: $button-height;
-    line-height: $button-height;
     cursor: pointer;
 
     &--disabled {
