--- a/src/components/Editor/Editor.scss
+++ b/src/components/Editor/Editor.scss
@@ -5,6 +5,10 @@
     width: 100%;
     &__group {
         @include forms--group;
+        &--final {
+            margin-top: $padding-base * 3;
+            justify-content: flex-end;
+        }
     }
     &__label {
         @include forms--label;
