add animations scss sheet

--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -19,3 +19,8 @@ $font--main: 'Montserrat', sans-serif;
 $font--code: 'Fira Mono', monospace;
 $font--buttons: 'Martel Sans', sans-serif;
 $font--title: 'Martel Sans', sans-serif;
+
+//Animation speeds
+$animation--fast: 0.3s;
+$animation--standard: 0.5s;
+$animation--slow: 0.9s;
