--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -4,7 +4,7 @@
 // user
 @import './variables.scss';
 @import './mixins.scss';
-
+@import './animations.scss';
 a {
     text-decoration: none;
     color: inherit;
