--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -35,17 +35,22 @@
         }
     }
     &__tool-list {
-        @include card;
     }
     &__region {
         @include card;
     }
     &__bottom-bar {
+        @include card;
+        background-color: unset;
+        box-sizing: border-box;
         display: block;
         position: absolute;
-        bottom: $padding-base * 4;
-        right: $padding-base * 5;
-        width: auto;
+        bottom: 0;
+        left: 0;
+        margin: 0;
+        width: 100vw;
+        display: flex;
+        justify-content: space-between;
     }
 
     &__tool-listing {
@@ -53,12 +58,12 @@
         color: $color--white;
         padding: 6px 8px;
         margin: 2px 2px;
-
-        font-size: 0.8em;
+        font-size: 0.9em;
         font-weight: 800;
         font-family: $font--code;
         border-radius: $borderRadius--large;
         display: inline-block;
+        animation: expand $animation--slow;
     }
     &__minus {
         $height: 1em;
