--- a/src/style/mixins.scss
+++ b/src/style/mixins.scss
@@ -16,7 +16,7 @@
     background-color: $color--white;
     box-shadow: $box-shadow--heavy;
     padding: $padding-base * 2;
-    margin: $padding-base 0;
+    margin: $padding-base * 2 0;
     font-family: $font--main;
     transition: 0.4s;
 }
