fade bottom bar of game manage on focus

--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -51,6 +51,11 @@
         width: 100vw;
         display: flex;
         justify-content: space-between;
+        &--disabled {
+            opacity: 0.4;
+            user-select: none;
+            pointer-events: none;
+        }
     }
 
     &__tool-listing {
