add bottom bar hiding on input focus

--- a/src/components/GameManagement/GameManagement.scss
+++ b/src/components/GameManagement/GameManagement.scss
@@ -52,9 +52,10 @@
         display: flex;
         justify-content: space-between;
         &--disabled {
-            opacity: 0.4;
+            opacity: 0.2;
             user-select: none;
             pointer-events: none;
+            bottom: -50px;
         }
     }
 
