--- a/src/style/animations.scss
+++ b/src/style/animations.scss
@@ -18,3 +18,12 @@
         opacity: 0;
     }
 }
+
+@keyframes rotate { 
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
