--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,5 +1,6 @@
 $borderRadius--small: 2px;
 $borderRadius--large: 6px;
+$borderColor--standard: 1px solid rgba(0, 0, 0, 0.1);
 $padding-base: 6px;
 // Colors
 $color--white: #fcfcfc;
